# vim-alchemy

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  bump_version.sh  test
.cargo/: config.toml
.github/workflows/: release.yml
benches/: alchemy_benchmark.rs
lua/: alchemy.backup  alchemy.lua
lua/alchemy/: Makefile  commands.lua  config.lua  core.lua  explorer.lua  health.lua  init.lua  picker.lua  preview.lua  telescope.lua  ui.lua  version.lua
lua/alchemy/commands/: chunk.lua  convert.lua  flatten.lua  hash.lua  init.lua  new.lua  pad.lua  random.lua  reverse.lua  rotate.lua
lua/alchemy/config/: init.lua
lua/alchemy/rpc/: init.lua
lua/alchemy/ui/: init.lua
lua/alchemy/utils/: init.lua
plugin/: alchemy.vim  build.lua
src/: cli.rs  client.rs  error.rs  handler.rs  lib.rs  logging.rs  main.rs  types.rs  value.rs
src/classify/: classifier.rs  mod.rs  regex.rs  traits.rs  types.rs
src/commands/: chunk_array.rs  classify.rs  classify_and_convert.rs  classify_and_hash.rs  convert.rs  flatten_array.rs  generate.rs  hash.rs  mod.rs  pad.rs  pad_left.rs  pad_right.rs  random.rs  reverse_array.rs  rotate_array.rs
src/commands/array/: chunk.rs  flatten.rs  mod.rs  reverse.rs  rotate.rs
src/encode/: decoding.rs  encoding.rs  error.rs  hashing.rs  mod.rs  traits.rs  types.rs
src/encode/encoding/: array.rs  base.rs  mod.rs  text.rs
tests/: cli_tests.rs
