[package]
name = "vim-alchemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bs58 = "0.5.0"
neovim-lib = "0.6.1"
rand = "0.8.5"
regex = "1.10.3"
rug = "1.24.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "2.0.11"
tracing = { version = "0.1.40", features = ["release_max_level_off"] }
tracing-subscriber = "0.3.18"
blake2 = "0.10.6"
md5 = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tracing-test = "0.2.5"

[[bench]]
name = "alchemy_benchmark"
harness = false

