[package]
name = "alchemy"
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
bs58 = "0.5.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.3"
rug = "1.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "2.0.11"
tracing = { version = "0.1.40", features = ["release_max_level_off"] }
tracing-subscriber = "0.3.18"
blake2 = "0.10.6"
md5 = "0.7.0"

[build-dependencies]
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
predicates = "3.0"
tracing-test = "0.2.5"

[[bench]]
name = "alchemy_benchmark"
harness = false

